[package]
name = "tracing-active-tree"
version = "0.1.0"
edition = "2021"
library = 1

[features]
default = [ ]
coarsetime = [ "dep:coarsetime" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.39", default-features = false, features = [ "attributes", "std" ] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [ "registry", "smallvec" ] }
indextree = "4.6.0"
dashmap = "5"
lazy_static = "1.3"
smallvec = "1.4"
coarsetime = { version = "0.1.32", optional = true }

[dev-dependencies]
tokio = { version = "1.5", features = ["rt-multi-thread", "time", "macros"] }
futures = { version = "0.3", features = ["compat", "thread-pool"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
criterion = "0.5.1"

[[bench]]
name = "oneshot"
path = "benches/oneshot.rs"
harness = false

[[bench]]
name = "spawn_many"
path = "benches/spawn_many.rs"
harness = false

[[bench]]
name = "spawn_depth"
path = "benches/spawn_depth.rs"
harness = false
